switch to visibility hidden to fix polyfill on IE11

--- a/less/app.less
+++ b/less/app.less
@@ -207,12 +207,12 @@ a {
         background-position: center;
 
         &.bg-static {
-            display: none;
+            visibility: hidden;
             opacity: 0;
             position: fixed;
 
             &.bg-active {
-                display: block;
+                visibility: visible;
             }
 
             &.bg-title {
@@ -221,7 +221,6 @@ a {
             }
 
             &.bg-end {
-                display: block;
                 position: absolute;
                 bottom: 0;
             }
